# cpp_snippets

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
algorithm/: backtracking_permutation.cpp  binary_search.cpp  binary_tree_bfs.cpp  binary_tree_dfs.cpp  binary_tree_iter_dfs.cpp  hoare_partition.cpp  lexicographal_ordering_permutation.cpp  lomuto_partition.cpp  three_way_partition.cpp
basic/: BFS.cpp  CMakeLists.txt  alignment.c  array  array_1.cpp  array_2  array_2.cpp  binary_search_tree.cpp  bit.cpp  bubble_sort.cpp  cast.cpp  combination.cpp  enum.cpp  hashtable.cpp  inherent.cpp  insert_sort.cpp  lambda.cpp  lvalue_rvalue.cpp  max_heap.cpp  object_pass.cpp  override.cpp  pair.cpp  partition.cpp  permutation.cpp  pointer.c  polymorphism.cpp  priority_queue.cpp  priority_queue_2.cpp  queue  queue.cpp  selection_sort.cpp  set.cpp  size.c  smart_pointer.cpp  stack  stack.cpp  static_cast.cpp  string.cpp  template.cpp  traversalBST.cpp  (+6 more)
basic/stack.dSYM/Contents/Resources/DWARF/: stack
benchmark_tests/: CMakeLists.txt  push_back.cpp
cache_test/: cache_001.cpp
design-pattern/: CMakeLists.txt
design-pattern/consumer-pattern/: CMakeLists.txt  main.cpp  main.hpp
design-pattern/consumer-pattern/test/: test_main.cpp
docs/: CNAME  index.md
opengl/: lesson_01.cpp
os/: async.cpp  async_2.cpp  background_task.cpp  blocking-producer-consumer.cpp  chrono.cpp  condition_variable.cpp  condition_variable_1.cpp  condition_variable_2.cpp  condition_variable_3.cpp  debounce_1.cpp  fork.cpp  lock_guard_1.cpp  lock_guard_2.cpp  lockfree_ringbuffer.cpp  mutex_1.cpp  mutex_2.cpp  mutex_3.cpp  rate_limiter.cpp  rate_limiter_fix_window.cpp  semaphore_1.cpp  semaphore_2.cpp  timer.cpp  (+7 more)
smart_pointer/: CMakeLists.txt  custom_deleter.cpp  custom_deleter_lambda.cpp  shared_ptr.cpp  unique_ptr.cpp  weak_ptr.cpp
(+10 files in other folders)
