cmake_minimum_required(VERSION 3.0)

add_executable(override override.cpp)
add_executable(template template.cpp)
add_executable(smart_pointer smart_pointer.cpp)
add_executable(virtual_destructor virtual_destructor.cpp)
add_executable(object_pass object_pass.cpp)
add_executable(inherent inherent.cpp)
